--- a/gatsby/src/assets/styles/global-scope/_theme.scss
+++ b/gatsby/src/assets/styles/global-scope/_theme.scss
@@ -249,7 +249,7 @@ button {
     .blog-item {
         .top {
             & > div {
-                background-color: $green-color;
+                background-color: $dark-black-color;
             }
         }
         .bottom {
